# issue_grouping

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  README.md  api.py  app.py  background_jobs.py  docker-compose.yml  generate_enhanced_llm_regression_report.py  pyproject.toml  requirements.txt  splade_api.py
docs/: consolidated_reports_design_doc.md
nginx/: default.conf
src/: async_gerrit_client.py  auto_prompt_optimization.py  consolidated_reports_analysis.py  constants.py  custom_clustering.py  data_loader.py  db_connections.py  email_helpers.py  embeddings.py  enhanced_consolidated_report.py  execution_timer_log.py  failure_analyzer.py  faiss_db.py  gerrit_data_fetching_helpers.py  get_prev_testplan_id.py  helpers.py  logger.py  nightly_stability_job.py  prompts.py  qgenie.py  qgenie_llm_calls.py  regression_api_call.py  splade_clustering.py  stability_report.py  teams_helpers.py
src/clustering/: __init__.py  hdbscan_clusterer.py  hybrid_matcher.py  metadata_store.py  ranker.py  searcher.py  splade_encoder.py  vector_store.py
src/core/: __init__.py  exceptions.py  interfaces.py
src/data/: __init__.py  excel_loader.py  gerrit_client.py  mysql_client.py
src/embeddings/: __init__.py  base.py  bge_provider.py  qgenie_provider.py
src/llm/: __init__.py  client.py  cluster_classifier.py  cluster_namer.py  deduplicator.py  prompts.py
src/monitoring/: __init__.py  email_notifier.py  hourly_report.py  teams_notifier.py
src/pipeline/: __init__.py  (+3 more)
streamlit_pages/: error_classification.py  issue_grouping.py  regression.py
(+13 files in other folders)
